# OpticalStaticBT-Heuristics

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.txt  main.cc  popGen.cc  run.sh  run_tests.bat  workload.py
.devcontainer/: Dockerfile  devcontainer.json
datasets/tor/: tor_1024.txt  tor_128.txt  tor_256.txt  tor_512.txt
etc/: run_tests_worst_case.bat
etc/results/ancestral/: result.csv
etc/results/facebook/: result_1.csv
etc/results/hpc/cesar_mocfe/: result.csv  result_1.csv
etc/results/hpc/cesar_nekbone/: result.csv
etc/results/hpc/exact_boxlib_cns_nospec_large/: result.csv
etc/results/p_fabric/p_fabric_0_1/: result_1.csv
etc/results/p_fabric/p_fabric_0_5/: result.csv
etc/results/p_fabric/p_fabric_0_8/: result.csv
etc/results/tor/: result_2.csv  result_3.csv  result_4.csv
etc/results/tor/tor_1024/: result.csv
etc/results/tor/tor_1024_mloga/: result.csv
etc/results/tor/tor_256_mloga/: result.csv
etc/results/tor/tor_512_mloga/: result.csv
etc/weights/: test
include/: algorithm.hh  bbst.hh  bounds.hh  convertgraph.hh  genetic.hh  graphbissection.hh  graphbissectionLog.hh  greedy.hh  huffman.hh  loggraphbissection.hh  manager.hh  mlogagraphbissection.hh  mloggapbissection.hh  onehopbissection.hh  onehopgraphbissection.hh  optbst.hh  recursiveGraphBisection.hh  util.hh
include/core/: bisectionRunRecord.hh  bounds.hh  log_level.hh  logging.hh  manager.hh  runConfig.hh  util.hh
include/treebuilders/: greedy.hh  optbst.hh
include/util/: compilerAttribute.hh  forwardIndex.hh  forwardIndexFactory.hh  singleInitVector.hh
plotter/: bar_graph.py  line_graph.py  plotter.py
scripts/: batch_run.py
scripts/plotter/: line_graph.py
src/: bounds.py  createDemandMatric.cc  createDemandMatrix.cc  getMatrixEntropy.cc  main.cc  newMain.cc  popGen.cc  run.cc  test_graphbissectionLog.cc  workload.cc  workload.py  worst_case.py
tests/: test_convertgraph.cc  test_main.cc
tests/include/: test_bisectionRunRecord.cc  test_convertgraph.cc  test_forwardIndex.cc  test_forwardIndexFactory.cc
weights/: high_locality
